=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.5
 - Fixed: weak randomly-generated passwords (fisharebest)
 - Fixed Logout sometimes goes to PGV site in SourceForge (canajun2eh)


Version 4.1.4
 - Added Login block changes to Logout block once user is logged in (canajun2eh)
 - Fixed Welcome page in IE: blocks on right side are all fixed height (canajun2eh)
 - Fixed [1924688] SVN 2755 V4.1.4 Incorrect display of Indi page with IE (fisharebest)
 - Fixed [1912085] Syntax Error in downloadbackup.php (fisharebest)
 - Fixed [1907585] RSS Error
 - Fixed [1906576] Indi/Fam lists ignore event privacy settings (fisharebest)
 - Fixed [1900498] SVN 2610 - changes effecting Joomla Bridge (fisharebest)
 - Fixed [1718333] New user verification fails when hash ends with dot (fisharebest)
 - Fixed [1915244] SVN 2719 Caused a Source Citation Display issue on indi page (fisharebest)
 - Fixed [1912716] V4.1.4 Random picture block size (fisharebest)
 - Fixed [1912525] V4.1.4 User edit screen not displaying correctly (fisharebest)
 - Fixed [1910328] PHP Errors in useradmin.php (fisharebest)
 - Fixed [1908247] (4.1.4) Backup error, advanced-html block (fisharebest)
 - Fixed [1907581] GBR_England.txt and ENG.htm (fisharebest)
 - Fixed [1906629] Parent's age at child's birth wrong (fisharebest)
 - Fixed [1906444] SVN 2662 V4.1.4 errors on Review Changes block (fisharebest)
 - Fixed [1905569] ERROR 8: unserialize(): Argument is not a string(fisharebest)
 - Fixed [1905512] SVN 2657: Logout returns to MyGedview page as logged-in user (fisharebest)
 - Fixed [1903888] [SVN 2640] V4.2 tempuser variable not defined (fisharebest)
 - Fixed [1903621] [SVN 2639] PHP Errors in useradmin.php (fisharebest)
 - Fixed [1902458] user edits return to wrong GEDCOM (fisharebest)